--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>cloud-api</module>
         <module>cloud-provider-dept-8001</module>
+        <module>cloud-consumer-dept-80</module>
 
     </modules>
     <packaging>pom</packaging>
