注册微服务8001

--- a/cloud-provider-dept-8001/src/main/resources/application.yml
+++ b/cloud-provider-dept-8001/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 8001
-
 spring:
   application:
     name: microservicecloud-dept
@@ -15,3 +14,7 @@ spring:
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7001/eureka/
