--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>cloud-provider-dept-8001</module>
         <module>cloud-consumer-dept-80</module>
         <module>cloud-eureka-7001</module>
+        <module>cloud-eureka-7002</module>
+        <module>cloud-eureka-7003</module>
 
     </modules>
     <packaging>pom</packaging>
@@ -58,6 +60,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 
