--- a/cloud-eureka-7001/src/main/resources/application.yml
+++ b/cloud-eureka-7001/src/main/resources/application.yml
@@ -2,15 +2,10 @@ server:
   port: 7001
 eureka:
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: false #false表示不向注册中心注册自己。
+    fetchRegistry: false #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     serviceUrl:
-      defaultZone: http://localhost:${server.port}/eureka/
-#server:
-#  port: 6868
-#eureka:
-#  client:
-#    register-with-eureka: false #是否将自己注册到Eureka服务中,本身就是所有无需注册
-#    fetch-registry: false #是否从Eureka中获取注册信息
-#    service-url: #Eureka客户端与Eureka服务端进行交互的地址
-#      defaultZone: http://127.0.0.1:${server.port}/eureka/
+      # defaultZone: http://eureak7002.com:7002/eureka/,http://eureak7003.com:7003/eureka/
+      defaultZone: http://localhost:7001/eureka
+  instance:
+    hostname: eureak7001.com
