--- a/cloud-provider-dept-8001/pom.xml
+++ b/cloud-provider-dept-8001/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.8</version>
         </dependency>
+        <!-- ribbon相关-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
     </dependencies>
 </project>
