--- a/cloud-consumer-dept-80/pom.xml
+++ b/cloud-consumer-dept-80/pom.xml
@@ -17,7 +17,11 @@
             <artifactId>cloud-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <!-- ribbon相关-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
