--- a/cloud-eureka-7002/src/main/resources/application.yml
+++ b/cloud-eureka-7002/src/main/resources/application.yml
@@ -5,6 +5,6 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eureak7001.com:7001/eureka/,http://eureak7003.com:7003/eureka/
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7003.com:7003/eureka/
   instance:
-    hostname: eureak7002.com
+    hostname: eureka7002.com
