--- a/cloud-eureka-7003/src/main/resources/application.yml
+++ b/cloud-eureka-7003/src/main/resources/application.yml
@@ -5,6 +5,6 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eureak7001.com:7001/eureka/,http://eureak7002.com:7002/eureka/
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
   instance:
-    hostname: eureak7003.com
+    hostname: eureka7003.com
