--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>cloud-eureka-7001</module>
         <module>cloud-eureka-7002</module>
         <module>cloud-eureka-7003</module>
+        <module>cloud-provider-dept-8002</module>
+        <module>cloud-provider-dept-8003</module>
 
     </modules>
     <packaging>pom</packaging>
@@ -24,7 +26,6 @@
         <java.version>1.8</java.version>
         <lombok.version>1.18.8</lombok.version>
         <log4j.version>1.2.17</log4j.version>
-
     </properties>
 
     <!-- 依赖声明 -->
