--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>cloud-eureka-7003</module>
         <module>cloud-provider-dept-8002</module>
         <module>cloud-provider-dept-8003</module>
+        <module>cloud-zuul-gateway-9527</module>
+
 
     </modules>
     <packaging>pom</packaging>
