--- a/cloud-provider-dept-8001/pom.xml
+++ b/cloud-provider-dept-8001/pom.xml
@@ -25,6 +25,10 @@
             <version>1.0.31</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.8</version>
