--- a/cloud-zuul-gateway-9527/src/main/resources/application.yml
+++ b/cloud-zuul-gateway-9527/src/main/resources/application.yml
@@ -2,11 +2,16 @@ server:
   port: 9527
 spring:
   application:
-    name: microservicecloud-zuul-gateway
+    name: gateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+
+
 eureka:
   client:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka,http://eureka7003.com:7003/eureka  
-  instance:
-    instance-id: gateway-9527.com
-    prefer-ip-address: true
