--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
         <module>cloud-provider-dept-8003</module>
         <module>cloud-zuul-gateway-9527</module>
         <module>cloud-provider-dept-hystrix-8001</module>
-
-
+        <module>cloud-infrastructure</module>
     </modules>
     <packaging>pom</packaging>
     <!--属性值-->
@@ -48,11 +47,23 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
     <dependencies>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
